--- a/package.json
+++ b/package.json
@@ -13,29 +13,37 @@
     "@stripe/stripe-js": "^8.6.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "ai": "^4.1.20",
+    "bullmq": "^5.41.0",
     "canvas-confetti": "^1.9.4",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
+    "ioredis": "^5.6.0",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.47.0",
     "next": "16.1.0",
-    "ai": "^4.1.20",
     "openai": "^6.14.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
-    "stripe": "^20.1.2"
+    "stripe": "^20.1.2",
+    "xstate": "^5.19.0",
+    "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.50.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
