--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,11 @@
     "version": 2,
     "framework": "nextjs",
     "installCommand": "npm install",
-    "buildCommand": "npm run build"
+    "buildCommand": "npm run build",
+    "crons": [
+        {
+            "path": "/api/cron/closer",
+            "schedule": "0 9 * * *"
+        }
+    ]
 }
