--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
         {
             "path": "/api/cron/closer",
             "schedule": "0 9 * * *"
+        },
+        {
+            "path": "/api/cron/process-delayed",
+            "schedule": "* * * * *"
         }
     ]
 }
