--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,15 @@
         },
         {
             "path": "/api/cron/process-delayed",
-            "schedule": "* * * * *"
+            "schedule": "0 0 * * *"
+        },
+        {
+            "path": "/api/cron/ghosting-hunter",
+            "schedule": "0 * * * *"
+        },
+        {
+            "path": "/api/cron/process-queue",
+            "schedule": "*/5 * * * *"
         }
     ]
 }
