--- a/vercel.json
+++ b/vercel.json
@@ -14,11 +14,11 @@
         },
         {
             "path": "/api/cron/ghosting-hunter",
-            "schedule": "0 * * * *"
+            "schedule": "0 9 * * *"
         },
         {
             "path": "/api/cron/process-queue",
-            "schedule": "*/5 * * * *"
+            "schedule": "0 20 * * *"
         }
     ]
 }
